feat(admin): 기능추가에 따른 로직 추가 및 변경